--- a/ventas1/build.xml
+++ b/ventas1/build.xml
@@ -31,8 +31,8 @@
       -post-clean:               called after cleaning build products 
       -pre-run-deploy:           called before deploying
       -post-run-deploy:          called after deploying
-
-    Example of pluging an obfuscator after the compilation could look like 
+     
+    Example of pluging an obfuscator after the compilation could look like como ver y sentir
 
         <target name="-post-compile">
             <obfuscate>
